# named-arguments

./: .gitlab-ci.yml  README.md
examples/: CMakeLists.txt  simple_wrap.cpp
include/: named_arguments.hpp
script/: examples.sh  test.sh
test/: CMakeLists.txt  argument_test.cpp  ref_argument_test.cpp  restricted_argument_test.cpp  return_value.cpp  simple_wrap.cpp  static_assert.cpp  target_argument_test.cpp
